yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rickandmorty
  labels:
    version: "0.0.1"
    app: rickandmorty
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: rickandmorty
